fix: restore original layout metrics and refine clipping fix

--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,8 @@ html {
   display: inline-block;
   overflow: hidden;
   vertical-align: bottom;
-  padding-bottom: 0.3em;
-  margin-bottom: -0.3em;
+  padding: 0 0.1em 0.25em 0;
+  margin: 0 -0.1em -0.25em 0;
 }
 
 .y {
